--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "docx": "^8.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.6.0",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
-    "docx": "^8.2.2",
-    "mammoth": "^1.6.0"
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "jest": "^29.6.4",
