--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,6 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/resumagic
+MONGODB_URI="mongodb://localhost:27017/cv_management"
+Backend_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:8080
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
