--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "axios": "^1.8.2",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
