--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:custom-section": "node src/tests/test-custom-section.cjs",
+    "test:custom-item": "node src/tests/test-add-custom-item.cjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -40,7 +42,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
-    "axios": "^1.8.1",
+    "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
