--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,8 @@
 PORT=5000
+NODE_ENV=development
 MONGODB_URI="mongodb://localhost:27017/cv_management"
 Backend_URL=http://localhost:5000
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL=http://localhost:5173
 JWT_SECRET=your_jwt_secret_key_here
-NODE_ENV=development
+DISABLE_AUTH=true
+DEBUG=true
