--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,7 +26,9 @@
   },
   "devDependencies": {
     "axios": "^1.8.2",
+    "chai": "^5.2.0",
     "jest": "^29.6.4",
+    "mocha": "^11.1.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
