--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.0.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.6.0",
     "mongoose": "^7.8.6",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^24.4.0"
   },
   "devDependencies": {
     "axios": "^1.8.2",
